2015-04-06  6.9.1-2 Dirk Lemstra <dirk@lem.....org>
  * Reduce draw epsilon to increate mathematical stability.

2015-04-04  6.9.1-1 Cristy  <quetzlzacatenango@image...>
  * New version 6.9.1-1, SVN revision 18308.

2015-03-21  6.9.1-1 Cristy  <quetzlzacatenango@image...>
  * Skip empty frames when comparing layers (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=27234).

2015-03-21  6.9.1-0 Cristy  <quetzlzacatenango@image...>
  * New version 6.9.1-0, SVN revision 18245.

2015-03-17  6.9.1-0 Cristy  <quetzlzacatenango@image...>
  * Grayscale DPX image files are no longer skewed (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=27209).

2015-03-16  6.9.1-0 Glenn Randers-Pehrson <glennrp@image...>
  * Fix integer overflow when scaling a 1-bit sample to Q64 (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=27195).

2015-03-01  6.9.0-10 Cristy  <quetzlzacatenango@image...>
  * New version 6.9.0-10, SVN revision 18299.

2015-03-03  6.9.0-10 Cristy  <quetzlzacatenango@image...>
  * Account for differences in image size when comparing two images (bug
    report from Dirk).
  * Set an upper ceiling compression with -quality and jpeg:extent (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=2&t=27071).

2015-03-01  6.9.0-9 Cristy  <quetzlzacatenango@image...>
  * New version 6.9.0-9, SVN revision 18179.

2015-02-22  6.9.0-9 Cristy  <quetzlzacatenango@image...>
  * Writing histograms / mpeg working again (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=27089).
  * The -linear-stretch option worked for Q16 but not Q32 (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=27112).

2015-02-22  6.9.0-8 Cristy  <quetzlzacatenango@image...>
  * Bogus release, withdrawn.

2015-02-22  6.9.0-7 Cristy  <quetzlzacatenango@image...>
  * New version 6.9.0-7, SVN revision 18067.
