@@ -1,5 +1,8 @@
 2015-04-06  6.9.1-2 Dirk Lemstra <dirk@lem.....org>
   * Reduce draw epsilon to increate mathematical stability.
+  * Fixed UTF8 issue when determining the current working directory
+    on Windows (reference
+    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=27295).
 
 2015-04-04  6.9.1-1 Cristy  <quetzlzacatenango@image...>
   * New version 6.9.1-1, SVN revision 18308.
